# inchrosil-arduino-PoC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_optimized.txt  Makefile  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  build.sh  dna_output_6037.ich  dna_output_6054.ich  gui.py  rpi5_inchrosil_rtos_example.cpp
data/: dna_output_1.ich  dna_output_11.ich  dna_output_13.ich  dna_output_15.ich  dna_output_17.ich  dna_output_19.ich  dna_output_3.ich  dna_output_5.ich  dna_output_7.ich  dna_output_9.ich  large_genome.fasta  test_custom.fasta  test_sequences.fasta
docs/: CLIENT_SERVER_GUIDE.md  COMPRESSION_QUICK_REF.md  COMPRESSION_TEST_RESULTS.md  DNA_SERIAL_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  RPI5_HARDWARE_ANALYSIS.md  compression_test_output.txt
include/: dna_serial_processor.hpp
scripts/: build.sh
src/: dna_binary_decoder.cpp  dna_client.cpp  dna_serial_example_optimized.cpp  dna_server.cpp  generate_binary_files.cpp  test_binary_files.cpp  test_compression_sizes.cpp  test_different_sizes.cpp  test_inchrosil_compression.cpp
